@@ -21,7 +21,7 @@
         <dependency>
 		   <groupId>org.apache.felix</groupId>
 		   <artifactId>org.apache.felix.configadmin</artifactId>
-		   <version>1.0.10</version>
+		   <version>1.2.4</version>
 		   <scope>provided</scope>
 		   <exclusions>
             <exclusion>
