@@ -35,7 +35,9 @@ public class ConfigPropertiesTest extends BaseConfigurationAdminTest {
 	private static final String OVERRIDE = "override";
 	private static final String DYNAMIC_SIMPLE = "dynamic-simple";
 	private static final String DYNAMIC_OVERRIDE = "dynamic-override";
-
+	private static final String INIT_TIME = "init-time";
+	private static final String EAGER_INIT = "eager-init";
+	private static final String LAZY_INIT = "lazy-init";
 
 	protected String[] getConfigLocations() {
 		return new String[] { "org/springframework/osgi/iandt/cm/config/config-properties.xml" };
@@ -64,6 +66,15 @@ public class ConfigPropertiesTest extends BaseConfigurationAdminTest {
 		cfg.update(props);
 
 		cfg = configAdmin.getConfiguration(DYNAMIC_OVERRIDE);
+		cfg.update(props);
+
+		cfg = configAdmin.getConfiguration(INIT_TIME);
+		cfg.delete();
+
+		cfg = configAdmin.getConfiguration(EAGER_INIT);
+		cfg.update(props);
+
+		cfg = configAdmin.getConfiguration(LAZY_INIT);
 		cfg.update(props);
 	}
 
@@ -122,5 +133,63 @@ public class ConfigPropertiesTest extends BaseConfigurationAdminTest {
 
 		assertEquals("framework", prop.getProperty("spring"));
 		assertEquals("vai", prop.getProperty("steve"));
+	}
+
+	public void testInitTimeout() throws Exception {
+		// check configuration
+		Configuration cfg = cm.getConfiguration(INIT_TIME);
+		assertNull(cfg.getProperties());
+
+		Thread th = new Thread(new Runnable() {
+			public void run() {
+				try {
+					// sleep 4 seconds
+					Thread.sleep(4 * 1000);
+				} catch (Exception ex) {
+				}
+
+				try {
+					cm.getConfiguration(INIT_TIME).update(props);
+				} catch (Exception ex) {
+					throw new RuntimeException("Cannot update config", ex);
+				}
+			}
+		});
+
+		long start = System.currentTimeMillis();
+		th.start();
+		// ask the bean
+		Properties bean = applicationContext.getBean(INIT_TIME, Properties.class);
+		long stop = System.currentTimeMillis();
+		assertEquals("Maria", bean.get("Tania"));
+		assertEquals("source", bean.get("spring"));
+		// check that at least 4 seconds elapsed
+		assertTrue(stop - start >= 4 * 1000);
+	}
+
+	public void testEagerInit() throws Exception {
+		// update the props
+		Configuration cfg = cm.getConfiguration(EAGER_INIT);
+		Properties props = new Properties();
+		props.put("spring", "dm");
+		props.put("updated", "true");
+
+		cfg.update(props);
+		Properties bean = applicationContext.getBean(EAGER_INIT, Properties.class);
+		assertEquals("source", bean.get("spring"));
+		assertNull(bean.get("updated"));
+	}
+
+	public void testLazyInit() throws Exception {
+		// update the props
+		Configuration cfg = cm.getConfiguration(LAZY_INIT);
+		Properties props = new Properties();
+		props.put("spring", "dm");
+		props.put("updated", "true");
+
+		cfg.update(props);
+		Properties bean = applicationContext.getBean(LAZY_INIT, Properties.class);
+		assertEquals("dm", bean.get("spring"));
+		assertEquals("true", bean.get("updated"));
 	}
 }
